--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "me-2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
-  }
+	"name": "me",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prettier-all": "yarn prettier --config .prettierrc --write ./src",
+		"fix": "npx eslint --fix ./src --ext .js --ext .jsx"
+	},
+	"dependencies": {
+		"@react-pdf-viewer/core": "^3.12.0",
+		"@react-pdf-viewer/default-layout": "^3.12.0",
+		"@react-pdf-viewer/get-file": "^3.12.0",
+		"clsx": "^2.1.1",
+		"dayjs": "^1.11.11",
+		"next": "14.2.4",
+		"pdfjs-dist": "2.16.105",
+		"pdfmake": "^0.2.10",
+		"react": "^18",
+		"react-dom": "^18",
+		"sass": "^1.77.6"
+	},
+	"devDependencies": {
+		"eslint": "^8",
+		"eslint-config-next": "14.2.4",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-unicorn": "^54.0.0",
+		"eslint-plugin-unused-imports": "^3.2.0",
+		"prettier": "^3.3.2"
+	}
 }
