--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
 		"@react-pdf-viewer/get-file": "^3.12.0",
 		"clsx": "^2.1.1",
 		"dayjs": "^1.11.11",
+		"gray-matter": "^4.0.3",
 		"next": "14.2.4",
 		"pdfjs-dist": "2.16.105",
 		"pdfmake": "^0.2.10",
 		"react": "^18",
 		"react-dom": "^18",
+		"remark": "^15.0.1",
+		"remark-html": "^16.0.1",
+		"remark-prism": "^1.3.6",
 		"sass": "^1.77.6"
 	},
 	"devDependencies": {
