--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"remark": "^15.0.1",
+		"remark-gfm": "^4.0.0",
 		"remark-html": "^16.0.1",
-		"remark-prism": "^1.3.6",
-		"sass": "^1.77.6"
+		"sass": "^1.77.6",
+		"shiki": "^1.10.3"
 	},
 	"devDependencies": {
 		"eslint": "^8",
